sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:4: error: type mismatch;
 found   : Unit
 required: Boolean
	while(switch=true) {
                    ^AlgBubbleSort3:8: error: not found: value k
      for(k<- 0 to getNombreValeurs()-(i+k)){
                                         ^